--- a/templates/marstemplate.html
+++ b/templates/marstemplate.html
@@ -14,8 +14,8 @@
                 <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
             </div>
         </div>
-        {{dataForTemplate[0]}}
-        {{dataForTemplate[0]['News Title']}}
+
+        
         <div class="row">
             <div class="container">
                 <div class="col-lg-9">
@@ -42,7 +42,8 @@
                         </div>
                      
                         <div class="">
-                        
+                            {{facts}}
+                        <!--
                                 <p><b>Current Mars Weather</b><br>
                                     {% for fact in theFactTable %} 
                                     <br>
@@ -50,7 +51,7 @@
                                     
                                 {% endfor %} 
                                    
-                                    
+                                   --> 
                             </p>
 
 
